--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@clerk/nextjs": "^5.3.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "svix": "^1.30.0"
   },
   "devDependencies": {
     "eslint": "^8",
